# goldbug

./: README  best-repertoire  g  goldbug.cabal  test.sgf
mem/: jC4.mem  open.mem
src/: Anal.hs  Color.hs  Db.hs  DbIO.hs  GBLib.hs  Game.hs  Main.hs  Move.hs  Opt.hs  PerfTest.hs  SGFBinary.hs  SGFBinaryColor.hs  Sgf.hs  Zob.hs  genZobTable.hs
