name:           goldbug
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       <syn>
build-type:     Simple
build-depends:  base, binary, bytestring, containers, derive, directory,
                Glob, mersenne-random, judy, FUtil

executable:     goldbug
main-is:        Main.hs
hs-source-dirs: src
