name:           goldbug
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       <syn>
build-type:     Simple
build-depends:  base >= 4, bytestring, cereal, containers, derive, directory,
                filepath, split, Glob >= 0.5.1, FUtil

executable:     goldbug
main-is:        Main.hs
hs-source-dirs: src
ghc-options:    -threaded
